# rag-platform

./: .env.example  .gitignore  Dockerfile  README.md  TRADEOFFS.md  docker-compose.yml  postman_collection.json  pyproject.toml
app/: auth.py  chunker.py  cli.py  config.py  db.py  embed.py  ingest.py  llm.py  main.py  parsers.py  qdrant.py  ratelimit.py  retrieval.py  routes.py
migrations/: 001_init.sql
samples/: compliance_handbook.txt  hr_onboarding.docx
scripts/: generate_samples.py  sample.txt
static/: index.html
